# SMRR

./: .gitignore  README.md  test.txt
Esercizi/Task1/: README.md
Esercizi/Task1/task1b_build/: CMakeCache.txt  Makefile  cmake_install.cmake
Esercizi/Task2/: README.md
Esercizi/Task2/build_matrix/: CMakeCache.txt  cmake_install.cmake
Esercizi/Task2/task2a/: CMakeLists.txt  charge_angle.ipynb  task2a.cc
Esercizi/Task2/task2a_build/: CMakeCache.txt  Makefile  cmake_install.cmake  exampletask2a
Esercizi/Task2/task2b/: CMakeLists.txt
Esercizi/Task2/task2b_build/: cmake_install.cmake
Esercizi/Task3/: README.md
Esercizi/Task3/task3a/: CMakeLists.txt
Esercizi/Task3/task3a_build/: CMakeCache.txt  Makefile  cmake_install.cmake
Esercizi/Task3/task3b/: CMakeLists.txt  task3b.cc
Esercizi/Task3/task3b_build/: CMakeCache.txt  Makefile  cmake_install.cmake  exampletask3b  execute.sh  run_0.root  run_1.root  run_10.root  run_11.root  run_12.root  run_13.root  run_14.root  run_2.root  run_3.root  run_4.root  run_5.root  run_6.root  run_7.root  run_8.root  run_9.root
Esercizi/Task4/: README.md
Esercizi/Task4/task4a/: CMakeLists.txt
Esercizi/Task4/task4a_build/: CMakeCache.txt  Makefile  cmake_install.cmake
Esercizi/Task4/task4b_build/: CMakeCache.txt  Makefile  cmake_install.cmake  summary.txt
Esercizi/Task4/task4c/: task4c.cc
Esercizi/Task4/task4c_build/: CMakeCache.txt  Makefile
Esercizi/Task6/: README.md
Esercizi/Task6/task6/: CMakeLists.txt
Esercizi/Task6/task6_build/: cmake_install.cmake
Esercizi/Task7/: README.md
Esercizi/Task7/G4+Garfield/NeutronGEM/: CMakeLists.txt
Esercizi/Task7/G4+Garfield/NeutronGEM/include/: GarfieldPhysics.hh
Esercizi/Task7/G4+Garfield/NeutronGEM/src/: GarfieldG4FastSimulationModel.cc  GarfieldPhysics.cc  NeutronGEMDetectorConstruction.cc  NeutronGEMHistoManager.cc  NeutronGEMPhysicsList.cc  NeutronGEMUserScoreWriter.cc
Exercises/Task1/task1b/: CMakeLists.txt
Exercises/Task1/task1b_build/: CMakeCache.txt  exampletask1b
Exercises/Task2/task2a/: CMakeLists.txt  task2a.cc
Exercises/Task2/task2a_build/: CMakeCache.txt  Makefile  cmake_install.cmake  dutsetupRotate.mac  exampletask2a
Exercises/Task2/task2b_build/: CMakeCache.txt  myMacro.mac
Exercises/Task3/task3a_build/: Makefile  cmake_install.cmake
Exercises/Task3/task3b/: CMakeLists.txt
Exercises/Task3/task3b_build/: Makefile
Exercises/Task4/task4a/: sd.mac
Exercises/Task4/task4b/: task4b.cc
Exercises/Task4/task4b_build/: exampletask4b
Exercises/Task4/task4c_build/: cmake_install.cmake
Exercises/Task6/task6/: task6.cc
Exercises/Task6/task6_build/: CMakeCache.txt  Makefile  exampletask6  histoEnergy.root  tree_run0.root
Exercises/mytask6/: CMakeLists.txt
Exercises/mytask6/PY/: dist_confr.py  energ_conf.py  histo.py  pname.py
Exercises/mytask6/include/: DetectorConstruction.hh
Exercises/mytask6/macros/: deut.mac  distance.mac  prot.mac  visQt.mac
Exercises/mytask6/src/: DetectorConstruction.cc  RootSaver.cc
Exercises/mytask6_build/: CMakeCache.txt  Makefile  cmake_install.cmake  examplemytask6  histoEnergy.root  tree_run0.root
Exercises/mytask6_build/.qt/: QtDeploySupport.cmake
Exercises/mytask6_build/PY/: histo.py  mother.py  pname.py
Exercises/mytask6_build/macros/: cycle_neutr.mac  deut.mac  distance.mac  energy.mac  neutr.mac
Exercises/task1/.svn/: all-wcprops  entries
Exercises/task1/task1_build/: CMakeCache.txt  Makefile  cmake_install.cmake
Exercises/task1/task1b/: CMakeLists.txt  task1b.cc
Exercises/task1/task1b_build/: CMakeCache.txt  Makefile  cmake_install.cmake  exampletask1b
Exercises/task1/task1d/: CMakeLists.txt  task1d.cc
Exercises/task1/task1d_build/: CMakeCache.txt  Makefile  cmake_install.cmake  exampletask1d
Exercises/task2/build_matrix/: Makefile
Exercises/task2/task2a/: CMakeLists.txt
Exercises/task2/task2a_build/: CMakeCache.txt  dutsetupRotateOnce.mac  exampletask2a  tree_run2.root  tree_run3.root  tree_run4.root
Exercises/task2/task2b_build/: Makefile  exampletask2b  vis.mac
Exercises/task5/: Doxyfile  GNUmakefile  main.doxy
Exercises/task6/: CMakeLists.txt  task6.cc
Exercises/task6_build/: CMakeCache.txt  Makefile  cmake_install.cmake  exampletask6  histoEnergy.root  tree_run0.root  tree_run1.root
GEANT4/LaBr3/: CMakeList.txt  CMakeLists.txt  LaBr3.cc  readme.md
GEANT4/LaBr3/include/: DetectorConstruction.hh  DetectorMessenger.hh  LaBr3Hit.hh  SensitiveDetector.hh
GEANT4/LaBr3/src/: DetectorConstruction.cc  LaBr3.cc  LaBr3Hit.cc  SensitiveDetector.cc
GEANT4/LaBr3_build/: Makefile
LaBr3/: LaBr3 (Meshed).stl  LezioneCAD.FCStd
LaBr3/include/: DetectorMessenger.hh  RootSaver.hh  SensitiveDetector.hh
LaBr3/src/: DetectorConstruction.cc  LaBr3Hit.cc  RootSaver.cc  SensitiveDetector.cc
Lezioni/TOF_build/: G4History.macro  Makefile  TOF
Prove/: test1.cpp
TOF_build/: CMakeCache.txt  cmake_install.cmake  test.mac  vis.mac
garfield_tasks/GEM_THICK/GEM_THICK/: CMakeLists.txt  ELIST.lis:Zone.Identifier  gem.C
garfield_tasks/Rx_Interaction/: CMakeLists.txt  E_cs_Ar.npy  RX_Interaction_GEM.C  RX_Interaction_GEM_v1.C  analisi.py  analisi_Ar.ipynb  analisi_Ar9010.ipynb  analisi_Kr.ipynb  analisi_Xe.ipynb  analisi_XeSF6.ipynb  confronto.ipynb  counts_Ar.npy  makefile.dat:Zone.Identifier  output_analisi_Ar.ipynb  output_analisi_Ar9010.ipynb  output_analisi_Kr.ipynb  output_analisi_Xe.ipynb  output_analisi_XeSF6.ipynb
garfield_tasks/Rx_Interaction/.npy/: A_cs_Ar.npy  A_cs_Ar9010.npy  A_cs_Kr.npy  A_cs_Xe.npy  A_cs_XeSF6.npy  E_cs_Ar.npy  Ecounts_Ar9010.npy  counts_Ar9010.npy  counts_Kr.npy  counts_Xe.npy  counts_XeSF6.npy
garfield_tasks/Rx_Interaction/Rx_build/: CMakeCache.txt  Makefile  Rx_Interaction  cmake_install.cmake  run.sh
garfield_tasks/Rx_Interaction/python/: analisi.ipynb  guadagno.ipynb  output_analisi.ipynb
garfield_tasks/Rx_build/: CMakeCache.txt  Makefile  Rx_Interaction  cmake_install.cmake  fit_results.txt  fit_results_Ar_9010.txt  run.sh
mytask6_build/: CMakeCache.txt  cmake_install.cmake
mytask6_build/macros/: visQt.mac
(+531 files in other folders)
